--- a/examples/express-pug/views/index.pug
+++ b/examples/express-pug/views/index.pug
@@ -1,10 +1,11 @@
 extends layout.pug
 
 block styles
-  link(rel="stylesheet" type="text/css" href=manifest['app.css'])
+  link(rel="stylesheet" type="text/css" href=manifest['index.css'])
 
 block scripts
-  script(src=manifest['app.js'])
+  script(src=manifest['runtime~index.js'])
+  script(src=manifest['index.js'])
 
 block content
   h1 express pug test
